Better usage of bootstrap.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@ Ton adress privée est : <input id="addressPrivate" type="text">; la public est 
 
 <br>
 <br>
-<br>
 
-
-<div class="row">
-  <div class="col-md-4"></div>
-  <div class="col-md-4">Transaction number : <input id="transactionNumber" type="text" size="35" value=""> <input id="goTransaction" type="button" value="Go"></div>
-  <div class="col-md-4"></div>
-</div>
+<div class="center-block" style="float:none; text-align: center;">Transaction number : <input id="transactionNumber" type="text" size="35" value=""> <button id="goTransaction" type="button" class="btn btn-primary">Go</button></div>
 
 <br>
 <br>
