--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  	<script src="bitcoin.js"></script>
   <script src="app/app.js"></script>
 
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
