--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ Ton adress privée est : <input id="addressPrivate" type="text">; la public est 
 
 
 <div id="controlHeader">
-  <div style="text-align: center; font-size: 20px;">To start using this application, please enter your precogs transaction number (it looks like : 457852264485256561252454).</div>
+  <div style="text-align: center; font-size: 15px;">To start using this application, please enter your precogs transaction number (it looks like : 457852264485256561252454).</div>
 
   <br>
 
-  <div class="center-block" style="float:none; text-align: center;">Transaction number : <input id="transactionNumber" type="text" size="35" value=""> <button id="goTransaction" type="button" class="btn btn-primary">Go</button></div>
+  <div class="center-block" style="float:none; text-align: center; font-size: 30px;">Transaction number : <input id="transactionNumber" type="text" size="35" value=""> <button id="goTransaction" type="button" class="btn btn-primary">Go</button></div>
 </div>
 
 
