Added a custom GO button.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<img src="img/precogs.png" style="position:absolute; top:0px; left:0px; width:200px;">
+<img id="precogsLogo" src="img/precogs.png">
 <br>
 <br>
 <br>
@@ -29,7 +29,12 @@ Ton adress privée est : <input id="addressPrivate" type="text">; la public est 
 
   <br>
 
-  <div class="center-block" style="float:none; text-align: center; font-size: 30px;">Transaction number : <input id="transactionNumber" type="text" size="35" value=""> <button id="goTransaction" type="button" class="btn btn-primary">Go</button></div>
+  <div class="center-block" style="float:none; text-align: center; font-size: 30px;">
+    Transaction number : 
+    <input id="transactionNumber" type="text" size="35" value="">
+    <!--<button id="goTransaction" type="button" class="btn btn-primary">Go</button>-->
+    <img id="goTransaction" src="img/button.png">
+  </div>
 </div>
 
 
