Move features in specific json file

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ window.onload = function() {
 							<h4 class="modal-title" id="myModalLabel">'+bctransaction.asset.name+'</h4>\
 						  </div>\
 						  <div class="modal-body">'+
-							getAsset(bctransaction.asset)+
+							getAsset(bctransaction.asset.reference)+
 							'</div>\
 						  <div class="modal-footer">\
 							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>\
